# Active-Perception-R1

./: .gitignore  AGENTS.md  BACKGROUND_RESEARCH.md  BOOKMARK_LOG.md  README.md  pyproject.toml  setup.py
aerorl/: __init__.py  config.py
aerorl/benchmarks/: __init__.py  vlm_grpo_benchmark.py
aerorl/examples/: __init__.py  basic_usage.py  qwen2_5_vl_grpo.py
aerorl/extensions/: __init__.py  ipc_kv_cache.py
aerorl/extensions/csrc/: ipc_kv_cache.cu
aerorl/kernels/: __init__.py  cispo_loss.py  dapo_filter.py  grpo_loss.py  gspo_loss.py
aerorl/utils/: __init__.py  processor_utils.py  quant_ref.py  vision_mask.py
configs/: active_vision_sample_task.json  self_driving_sample_task.json
configs/agent_loop/: active_perception_zoom_agent.yaml
reports/: perf-iteration-2026-03-23.md  smoke-2026-03-23.md
reports/active_benchmark/: benchmark-20260323-110245.json  benchmark-20260323-110245.md  benchmark-20260323-110341.json  benchmark-20260323-110341.md  benchmark-20260323-110437.json  benchmark-20260323-110437.md  benchmark-20260323-110530.json  benchmark-20260323-110530.md  benchmark-20260323-112221.json  benchmark-20260323-112221.md  benchmark-20260323-112305.json  benchmark-20260323-112305.md  benchmark-20260323-112352.json  benchmark-20260323-112352.md  benchmark-20260323-112433.json  benchmark-20260323-112433.md  benchmark-20260323-221157.json  benchmark-20260323-221157.md  benchmark-20260323-221315.json  benchmark-20260323-221315.md  benchmark-20260323-221456.json  benchmark-20260323-221456.md  benchmark-20260323-221612.json  benchmark-20260323-221612.md
reports/real_benchmark/: docvqa-suite-20260323-230000.json  docvqa-suite-20260323-230000.md  leaderboard-2026-03-23.md
results/: self_driving_policy_sweep.json  self_driving_policy_sweep.md
scripts/: benchmark_active_vision.py  benchmark_docvqa_suite.py  run_self_driving_policy_sweep.py  train_grpo_active_vision.sh  train_grpo_self_driving.sh
src/: sitecustomize.py
src/active_perception_r1/: __init__.py
tasks/: lessons.md  todo.md
tests/: test_active_perception_agent.py  test_active_vision_reward.py  test_aerorl.py  test_agent_loop_dataset.py  test_benchmark_protocol.py  test_dataset_schema.py  test_live_reinjection.py  test_python_dev_headers.py  test_self_driving_extension.py  test_sitecustomize.py  test_training_profiles.py  test_zoom_runtime.py
(+21 files in other folders)
