[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "active-perception-r1"
version = "0.1.0"
description = "verl-based active perception GRPO scaffold for visual self-verification research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
bench = [
    "torch>=2.7.0",
    "transformers>=5.3.0",
    "datasets>=4.8.0",
    "pyarrow>=23.0.0",
]
train = [
    "torch>=2.7.0",
    "transformers>=5.3.0",
    "datasets>=4.8.0",
    "pyarrow>=23.0.0",
    "verl>=0.7.1",
    "vllm>=0.18.0",
    "ray>=2.54.0",
    "pybase64>=1.4.3",
    "hydra-core>=1.3.2",
    "peft>=0.18.1",
]
test = [
    "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
